Ajustes na documentação do swagger
