# docs/swagger.yaml
@@ -87,6 +87,40 @@ paths:
       summary: Lista todos os clientes com paginação
       tags:
       - clientes
+    post:
+      consumes:
+      - application/json
+      description: Cadastra um novo cliente no sistema com base nos dados fornecidos.
+      parameters:
+      - description: Dados do cliente a ser cadastrado
+        in: body
+        name: cliente
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.ClienteResponse'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Cliente cadastrado com sucesso
+          schema:
+            $ref: '#/definitions/dtos.ClienteResponse'
+        "400":
+          description: 'Erro ao processar a requisição (ex: documento inválido ou
+            JSON inválido)'
+          schema:
+            $ref: '#/definitions/dtos.ResponseErro'
+        "409":
+          description: Cliente já cadastrado
+          schema:
+            $ref: '#/definitions/dtos.ResponseErro'
+        "500":
+          description: Erro interno ao cadastrar o cliente
+          schema:
+            $ref: '#/definitions/dtos.ResponseErro'
+      summary: Cadastra um novo cliente
+      tags:
+      - clientes
   /clientes/{documento}:
     delete:
       consumes:
@@ -207,5 +241,5 @@ paths:
             $ref: '#/definitions/dtos.ResponseStatus'
       summary: Retorna o status do servidor
       tags:
-      - status
+      - suporte
 swagger: "2.0"
